--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "mongoose-slug-updater": "^3.3.0",
     "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10",
+    "redis": "^5.10.0",
     "slugify": "^1.6.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^7.0.4"
   }
 }
